--- a/intex.html
+++ b/intex.html
@@ -45,6 +45,7 @@
     </div>
 </div>
 </div>
-<h5>Made with <i class="red bi-heart-fill"></i> & One day of Sleepless Night</h5>
+<h5>Made with <i class="red bi-heart-fill"></i></h5>
+<h6>@rajatsandeepsen</h6>
 </body>
 </html>
