--- a/intex.html
+++ b/intex.html
@@ -19,22 +19,22 @@
     <!-- <h2 class="text-black">GDSC SJCET Palai</h2> -->
     
     <div class="linkbox col-12 col-md-10 justify-content-center m-auto row container row-cols-3 row-cols-md-4 gap-md-3 gap-2 p-0">
-        <a href="https://instagram.com/rajatsandeepsen"class="text-decoration-none p-0">
+        <a href="https://instagram.com/dscsjcet"class="text-decoration-none p-0">
             <i class="bi bi-instagram col row instagram allanime rounded-4"></i>
         </a>
-        <a href="https://linkedin.com/in/rajatsandeepsen" class="text-decoration-none p-0">
+        <a href="https://discord.gg/9SHKyqhyvQ" class="text-decoration-none p-0">
             <i class="bi bi-discord col row discord allanime rounded-4"></i>
         </a>
-        <a href="https://github.com/rajatsandeepsen"class="text-decoration-none p-0">
+        <a href="https://github.com/DSC-SJCET"class="text-decoration-none p-0">
             <i class="bi bi-github col row github allanime rounded-4"></i>
         </a>
-        <a href="https://twitter.com/rajatsandeepsen" class="text-decoration-none p-0">
-            <i class="bi bi-twitter col row twitter allanime rounded-4"></i>
+        <a href="https://dsc-sjcet.herokuapp.com/" class="text-decoration-none p-0">
+            <i class="bi bi-globe col row twitter allanime rounded-4"></i>
         </a>
-        <a href="https://instagram.com/rajatsandeepsen" class="text-decoration-none p-0">
-            <i class="bi bi-globe col row browser allanime rounded-4"></i>
+        <a href="https://chat.whatsapp.com/DDuHZDZSEfE94O0xggnhUA" class="text-decoration-none p-0">
+            <i class="bi bi-whatsapp col row browser allanime rounded-4"></i>
         </a>
-        <a href="https://instagram.com/rajatsandeepsen" class="text-decoration-none p-0">
+        <a href="https://gdsc.community.dev/st-josephs-college-of-engineering-and-technology-palai/" class="text-decoration-none p-0">
             <i class="bi bi-google col row chapter allanime rounded-4"></i>
         </a>
     </div>
