--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     
 </head>
-<body class="p-3 vh-100 vw-100 m-0">
+<body class="p-3 vh-100 vw-100 m-0 prevent-select">
 <div class="mybox d-flex flex-column unwanted bg-white p-0 p-md-2 rounded-4">
     <img id="DSC-SJCET" src="media/color logo center.png" alt="DSC-SJCET-PALAI" class="row col-8 col-md-5 m-auto mb-4 mb-md-5">
     <!-- <img id="SMALL-DSC-SJCET" src="media/small-DSC-SJCET.png" alt="DSC-SJCET-PALAI" class="row col-6 m-auto"> -->
@@ -56,4 +56,5 @@
     </div>
 </div>
 </body>
+<script>document.getElementById('DSC-SJCET').ondragstart = function() { return false; };</script>
 </html>
